New Updated Portfolio

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<img src="images/Home/img.jpeg" alt="Logo">
+							<img src="images/Home/mine.PNG" alt="Logo">
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -36,7 +36,7 @@
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#Projects">Projects</a></li>
 								<li><a href="#Certificates">Certificates</a></li>
-								<li><a href="#Achievements">Achievements</a></li>
+								<li><a href="#Highlights">Highlights</a></li>
 								<li><a href="#Experience">Experience</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -91,6 +91,55 @@
 
 <!--2025 -->
 	<h3 style="text-align:center; font-size: 25px;">📅 Year 2025</h3>
+
+
+	<div style="text-align: center;">
+		<a style="font-size: 19px;" href="https://github.com/SanaUllah04/Recipe-Generator" target="_blank">Recipe Generator - Web-AI Application</a>
+	</div>
+	<br>
+	<div style="text-align: center;">
+		<img src="images/Projects/recipe-generator.png" alt="" style="max-width: 100%; height: auto;" />
+	</div>
+
+	<hr>
+
+
+
+	<div style="text-align: center;">
+		<a style="font-size: 19px;" href="https://github.com/SanaUllah04/blog-summarizer" target="_blank">Blog Summarizer Web-AI Application</a>
+	</div>
+	<br>
+	<div style="text-align: center;">
+		<img src="images/Projects/blog.png" alt="" style="max-width: 100%; height: auto;" />
+	</div>
+
+	<hr>
+
+
+
+	<div style="text-align: center;">
+		<a style="font-size: 19px;" href="https://github.com/SanaUllah04/Quote-Generator-Web-App" target="_blank">Quote Generator Web App</a>
+	</div>
+	<br>
+	<div style="text-align: center;">
+		<img src="images/Projects/quote.png" alt="" style="max-width: 100%; height: auto;" />
+	</div>
+
+	<hr>
+
+
+
+	<div style="text-align: center;">
+		<a style="font-size: 19px;" href="https://github.com/SanaUllah04/Text-To-Speech-Service/tree/main" target="_blank">Text-to-Speech Web-Application</a>
+	</div>
+	<br>
+	<div style="text-align: center;">
+		<img src="images/Projects/TTS_Webpage.png" alt="" style="max-width: 100%; height: auto;" />
+	</div>
+
+	<hr>
+
+
 
 
 	<div style="text-align: center;">
@@ -248,7 +297,7 @@
 		</p>
 		<div class="navigation-buttons">
 			<a href="#Projects" class="button previous">Previous</a>
-			<a href="#Achievements" class="button next">Next</a>
+			<a href="#Highlights" class="button next">Next</a>
 		</div>
 	</article>
 
@@ -258,17 +307,46 @@
 
 
 <!-- Achievements -->
-	<article id="Achievements">
-		<h2 class="major">Achievements</h2>
+	<article id="Highlights">
+		<h2 class="major">Highlights</h2>
 		<p>
+
+			<h3 style="text-align: center;">FPSC Coding Compition - 2025</h3>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Highlights/FPSC.jpg" alt="" style="max-width: 100%; height: auto;" />
+			</div>
+
+			<hr>
+
+
+			<h3 style="text-align: center;">Emumba Industry Visit - 2025</h3>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Highlights/emumba.jpg" alt="" style="max-width: 100%; height: auto;" />
+			</div>
+
+			<hr>
+
+
+			<h3 style="text-align: center;">FYP for Special Education Complex - 2025</h3>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Highlights/special school.jpg" alt="" style="max-width: 100%; height: auto;" />
+				<img src="images/Highlights/complex.jpg" alt="" style="max-width: 100%; height: auto;" />
+			</div>
+
+
+			<hr>
+
+
+
 			<h3 style="text-align: center;">Bronze Medalist - 2023</h3>
 			<br>
 			<div style="text-align: center;">
-				<img src="images/Achievements/medal.jpg" alt="" style="max-width: 100%; height: auto;" />
+				<img src="images/Highlights/medal.jpg" alt="" style="max-width: 100%; height: auto;" />
 			</div>
 
-	
-			
 			<hr>
 		</p>
 		<div class="navigation-buttons">
@@ -288,8 +366,58 @@
 	<article id="Experience">
 		<h2 class="major">Experience</h2>
 		<p>
+
 			<div style="text-align: center;">
-				<a  style="font-size: 19px;" href="https://www.linkedin.com/posts/sanaullah-cs_teachingassistant-operatingsystems-computerscience-activity-7237493571644207105-xmF2?utm_source=share&utm_medium=member_desktop&rcm=ACoAADis3pkBUCzUGEFSJq6bqVnxQ9-A6F0PqfA" target="_blank">Teacher's Assistant for the "Operating Systems" Course</a>
+				<a  style="font-size: 19px;" href="https://www.linkedin.com/posts/sanaullah-cs_offer-letter-activity-7398650255518588928-ggCk?utm_source=share&utm_medium=member_desktop&rcm=ACoAADis3pkBUCzUGEFSJq6bqVnxQ9-A6F0PqfA" target="_blank">DevOps Intern at Cloudlem pvt ltd.</a>
+				<br><br>
+				"November 2025   -   December 2025"
+			</div>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Experience/cloudlem.png" alt="" style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+			</div>
+
+
+			<hr>
+
+			<div style="text-align: center;">
+				<a  style="font-size: 19px;" href="https://www.linkedin.com/posts/sanaullah-cs_hamesha-der-kar-deta-huun-session-arrange-activity-7377756184000364544-eGPP?utm_source=share&utm_medium=member_desktop&rcm=ACoAADis3pkBUCzUGEFSJq6bqVnxQ9-A6F0PqfA" target="_blank">Teaching Assistant at FAST NUCES PESHAWAR</a>
+				<br><br>
+				"August 2025   -   December 2025"
+			</div>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Experience/ta.jpeg" alt="" style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+			</div>
+
+			<hr>
+
+			<div style="text-align: center;">
+				<a  style="font-size: 19px;" href="https://www.linkedin.com/posts/arsalanmateen_i-still-remember-july-24-the-day-after-nu-ugcPost-7396571202061762560-E93D?utm_source=share&utm_medium=member_desktop&rcm=ACoAADis3pkBUCzUGEFSJq6bqVnxQ9-A6F0PqfA" target="_blank">Front Desk Officer at FAST NUCES PESHAWAR</a>
+				<br><br>
+				"June 2025   -   August 2025"
+			</div>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Experience/fdo.jpg" alt="" style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+			</div>
+
+			<hr>
+
+			<div style="text-align: center;">
+				<a  style="font-size: 19px;" href="https://www.linkedin.com/posts/sanaullah-cs_ai-webdevelopment-internshipcompletion-activity-7360919017664016385-m42W?utm_source=share&utm_medium=member_desktop&rcm=ACoAADis3pkBUCzUGEFSJq6bqVnxQ9-A6F0PqfA" target="_blank">AI Web Developer at Nexium Ltd.</a>
+				<br><br>
+				"July 2025   -   August 2025"
+			</div>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Experience/nexium intern.jpeg" alt="" style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+			</div>
+
+			<hr>
+
+			<div style="text-align: center;">
+				<a  style="font-size: 19px;" href="https://www.linkedin.com/posts/sanaullah-cs_teachingassistant-operatingsystems-computerscience-activity-7237493571644207105-xmF2?utm_source=share&utm_medium=member_desktop&rcm=ACoAADis3pkBUCzUGEFSJq6bqVnxQ9-A6F0PqfA" target="_blank">Teacher's Assistant at FAST NUCES PESHAWAR</a>
 				<br><br>
 				"August 2024   -   December 2024"
 			</div>
@@ -299,7 +427,6 @@
 			</div>
 			
 			<hr>
-
 
 			<p>
 			<div style="text-align: center;">
@@ -314,10 +441,9 @@
 			</div>
 		
 
-
 		</p>
 		<div class="navigation-buttons">
-			<a href="#Achievements" class="button previous">Previous</a>
+			<a href="#Highlights" class="button previous">Previous</a>
 			<a href="#contact" class="button next">Next</a>
 		</div>
 	
