--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 							<div class="inner">
 								<p><h2><b>Welcome to the Digital Frontier</b></h2><br>
 									<h3>Greetings, I'm SanaUllah</h3>
-									🚀 Tech Explorer | 💡 Problem Solver | 🌟 Enthusiastic Learner<br>
-									🎓 4th Year CS Student at NU-FAST Peshawar<br>
+									Final Year CS Student at NU-FAST Peshawar<br>
 								</p>
 							</div>
 						</div>
@@ -438,7 +437,7 @@
 			</div>
 			<br>
 			<div style="text-align: center;">
-				<img src="images/Experience/TA.jpg" alt="" style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+				<img src="images/Experience/TA SHIP LETTER 5 SEM.jpg" alt="" style="max-width: 100%; height: auto; margin-bottom: 10px;" />
 			</div>
 			
 			<hr>
@@ -474,12 +473,13 @@
 		<h2 class="major">Contact</h2>
 		<p>If you'd like to learn more about my background and experiences, you can download my resume using the link below:</p>
 		<ul class="actions">
-			<li><a href="https://drive.google.com/file/d/1d9bBew8OUCe06tIgQEa2NNuSl16Ps7rH/view?usp=drive_link" class="button primary" target="_blank" rel="noopener noreferrer">View Resume</a></li>
+			<li><a href="https://drive.google.com/file/d/1Dfbpqq6K1EzFR18zJ1a70A8CgDBBEfEZ/view?usp=drive_link" class="button primary" target="_blank" rel="noopener noreferrer">View Resume</a></li>
 		</ul>
 		<ul class="icons">
 			<li><a href="https://x.com/MrWarden04" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 			<li><a href="https://www.linkedin.com/in/sana-ullah-389532226/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
 			<li><a href="https://github.com/SanaUllah04" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+			<li><a href="https://www.instagram.com/sanaullah.here/" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 		</ul>
 		<div class="navigation-buttons">
 			<a href="#Experience" class="button previous">Previous</a>
