--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
 
 
-<!-- Achievements -->
+<!-- Highlights -->
 	<article id="Highlights">
 		<h2 class="major">Highlights</h2>
 		<p>
@@ -340,7 +340,27 @@
 				<img src="images/Highlights/emumba.jpg" alt="" style="max-width: 100%; height: auto;" />
 			</div>
 
+
+
+
 			<hr>
+
+
+			<h3 style="text-align: center;">Event Management Head - FAST Community Service Society (FCSS) - 2025</h3>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Highlights/Head Event Management.png" alt="" style="max-width: 100%; height: auto;" />
+				<img src="images/Highlights/" alt="" style="max-width: 100%; height: auto;" />
+			</div>
+
+
+
+
+
+
+			<hr>
+
+			
 
 
 			<h3 style="text-align: center;">FYP for Special Education Complex - 2025</h3>
