Final Updates on Highlights.

--- a/index.html
+++ b/index.html
@@ -325,6 +325,19 @@
 		<h2 class="major">Highlights</h2>
 		<p>
 
+
+			<h3 style="text-align: center;">Event Management - Team Co-Lead - Notion
+				<br> FAST Peshawar - 2025</h3>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Highlights/Notion Face.png" alt="" style="max-width: 100%; height: auto;" />
+				<img src="images/Highlights/" alt="" style="max-width: 100%; height: auto;" />
+			</div>
+
+
+			<hr>
+
+
 			<h3 style="text-align: center;">FPSC Coding Compition - 2025</h3>
 			<br>
 			<div style="text-align: center;">
@@ -346,7 +359,8 @@
 			<hr>
 
 
-			<h3 style="text-align: center;">Event Management Head - FAST Community Service Society (FCSS) - 2025</h3>
+			<h3 style="text-align: center;">Event Management Head <br>
+				FAST Community Service Society (FCSS) - 2025</h3>
 			<br>
 			<div style="text-align: center;">
 				<img src="images/Highlights/Head Event Management.png" alt="" style="max-width: 100%; height: auto;" />
