--- a/index.html
+++ b/index.html
@@ -283,6 +283,36 @@
 	<article id="Certificates">
 		<h2  class="major">Certificates</h2>
 		<p>
+
+			<h3 style="font-size: 19px;">IQM Quantum Winter School</h3>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Certificates/IQM Quantum School.jpg" alt="" style="max-width: 100%; height: auto;" />
+			</div>
+	
+			<hr>
+
+
+			<h3 style="font-size: 19px;">Mathematical Foundations & 
+				<br> Quantum Mechanics Essentials</h3>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Certificates/Mathematical Foundations and Quantum Mechanics Essentials.jpeg" alt="" style="max-width: 100%; height: auto;" />
+			</div>
+	
+			<hr>
+
+
+			<h3 style="font-size: 19px;">Open Source Models With Hugging Faces</h3>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Certificates/Hugging Face.png" alt="" style="max-width: 100%; height: auto;" />
+			</div>
+	
+			<hr>
+
+
+
 			<h3 style="font-size: 19px;">MicroServices with Docker</h3>
 			<br>
 			<div style="text-align: center;">
@@ -306,7 +336,38 @@
 			<div style="text-align: center;">
 				<img src="images/Certificates/carbon.jpg" alt="" style="max-width: 100%; height: auto;" />
 			</div>
+
+
+			<hr>
 	
+			<br>
+			<h3 style="font-size: 19px;">Career Crafters Internship Webinar</h3>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Certificates/Participation Certificate in Webinar.jpg" alt="" style="max-width: 100%; height: auto;" />
+			</div>
+
+
+			<hr>
+	
+			<br>
+			<h3 style="font-size: 19px;">Getting Started With C/C++</h3>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Certificates/Certificate for C++.jpg" alt="" style="max-width: 100%; height: auto;" />
+			</div>
+
+
+			<hr>
+	
+			<br>
+			<h3 style="font-size: 19px;">Hands-On Workshop On Robotics Bootcamp</h3>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Certificates/Robotics BootCamp.jpg" alt="" style="max-width: 100%; height: auto;" />
+			</div>
+
+
 			
 		</p>
 		<div class="navigation-buttons">
