Certificate & Highlights Updated.

--- a/index.html
+++ b/index.html
@@ -339,6 +339,20 @@
 
 
 			<hr>
+
+	
+			<br>
+			<h3 style="font-size: 19px;">Past, Present & Future with Data</h3>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Certificates/Certificate.jpg" alt="" style="max-width: 100%; height: auto;" />
+			</div>
+
+
+			<hr>
+
+
+
 	
 			<br>
 			<h3 style="font-size: 19px;">Career Crafters Internship Webinar</h3>
@@ -446,6 +460,59 @@
 			</div>
 
 
+
+
+
+
+
+
+
+			<hr>
+
+
+
+			<h3 style="text-align: center;">Nutec 25' Stall Setup - 2025</h3>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Highlights/stall.jpg" alt="" style="max-width: 100%; height: auto;" />
+			</div>
+
+
+
+
+
+
+			<hr>
+
+
+
+			<h3 style="text-align: center;">Text-to-Speech Generator Workshop - 2025</h3>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Highlights/imscience google workshop.jpg" alt="" style="max-width: 100%; height: auto;" />
+			</div>		
+
+
+
+
+
+
+			<hr>
+
+
+
+			<h3 style="text-align: center;">Trillet AI Hackathon - 2025</h3>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Highlights/Trillet.jpg" alt="" style="max-width: 100%; height: auto;" />
+				<img src="images/Highlights/Trillet 2.jpg" alt="" style="max-width: 100%; height: auto;" />
+			</div>
+
+
+
+
+
+
 			<hr>
 
 
@@ -455,6 +522,22 @@
 			<div style="text-align: center;">
 				<img src="images/Highlights/medal.jpg" alt="" style="max-width: 100%; height: auto;" />
 			</div>
+
+
+
+
+			<hr>
+
+
+
+			<h3 style="text-align: center;">Rookie GameJam Participant - 2023</h3>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Highlights/Game Jam.jpg" alt="" style="max-width: 100%; height: auto;" />
+			</div>
+
+
+
 
 			<hr>
 		</p>
