Certificate and Highlight added - 2025

--- a/index.html
+++ b/index.html
@@ -400,6 +400,17 @@
 		<h2 class="major">Highlights</h2>
 		<p>
 
+			<h3 style="text-align: center;">DevFest 
+				<br> IMSciences Peshawar - 2025</h3>
+			<br>
+			<div style="text-align: center;">
+				<img src="images/Highlights/DevFest.png" alt="" style="max-width: 100%; height: auto;" />
+				<img src="images/Highlights/" alt="" style="max-width: 100%; height: auto;" />
+			</div>
+
+
+			<hr>
+			
 
 			<h3 style="text-align: center;">Event Management - Team Co-Lead - Notion
 				<br> FAST Peshawar - 2025</h3>
@@ -566,7 +577,7 @@
 			</div>
 			<br>
 			<div style="text-align: center;">
-				<img src="images/Experience/cloudlem.png" alt="" style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+				<img src="images/Experience/Cloudlem_Certificate.png" alt="" style="max-width: 100%; height: auto; margin-bottom: 10px;" />
 			</div>
 
 
