--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
 				As a third-year Computer Science student at NU-FAST Peshawar, I'm not just studying code – I'm decoding
 				the future. My journey? It's like being a kid in a cosmic candy store, but instead of sweets, I'm
 				tasting the flavors of:<br><br>
-				<b>🔬 Data Science:</b> Where I'm learning to be a data whisperer, coaxing insights from digital
-				chaos.<br>
+				<br>
 				<b>🤖 Machine Learning:</b> Teaching machines to think? It's like raising a very logical child!
 				<b>🕵️ Ethical Hacking: </b>Because sometimes, to protect the castle, you need to think like the
 				dragon.<br>
@@ -767,7 +766,8 @@
 						<em>emphasized</em>.
 						This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
 						This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a
-							href="#">this is a link</a>.</p>
+							href="#">this is a link</a>.
+					</p>
 					<hr />
 					<h2>Heading Level 2</h2>
 					<h3>Heading Level 3</h3>
