--- a/index.html
+++ b/index.html
@@ -63,14 +63,9 @@
 				<h3>My Techventure</h3>
 				Imagine a world where data tells stories, machines think, and digital fortresses are unbreakable. That's
 				the world I'm stepping into, armed with nothing but curiosity and a laptop!<br><br>
-				As a third-year Computer Science student at NU-FAST Peshawar, I'm not just studying code – I'm decoding
-				the future. My journey? It's like being a kid in a cosmic candy store, but instead of sweets, I'm
-				tasting the flavors of:<br><br>
-				<br>
-				<b>🤖 Machine Learning:</b> Teaching machines to think? It's like raising a very logical child!
-				<b>🕵️ Ethical Hacking: </b>Because sometimes, to protect the castle, you need to think like the
-				dragon.<br>
-				<br>
+				As a final-year Computer Science student at NU-FAST Peshawar, I'm not just studying code – I'm decoding
+				the future.
+
 				Sure, I'm still at the "Hello World" stage in these realms, but watch out! My debugging skills are
 				leveling up faster than a character in an RPG. Each day is a new quest, each project a boss battle, and
 				every line of code I write is experience points gained.<br><br>
