Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -441,6 +441,21 @@
 				<h2 class="major">Highlights</h2>
 				<p>
 
+
+				<h3 style="text-align: center;">RAG with Vertex AI
+					<br> Vitual - 2026
+				</h3>
+				<br>
+				<div style="text-align: center;">
+					<img src="images/Highlights/RAG with Vertex AI.png" alt="" style="max-width: 100%; height: auto;" />
+					<img src="images/Highlights/" alt="" style="max-width: 100%; height: auto;" />
+				</div>
+
+
+				<hr>
+
+
+
 				<h3 style="text-align: center;">DevFest
 					<br> IMSciences Peshawar - 2025
 				</h3>
@@ -484,18 +499,6 @@
 
 
 
-
-				<hr>
-
-
-				<h3 style="text-align: center;">Event Management Head <br>
-					FAST Community Service Society (FCSS) - 2025</h3>
-				<br>
-				<div style="text-align: center;">
-					<img src="images/Highlights/Head Event Management.png" alt=""
-						style="max-width: 100%; height: auto;" />
-					<img src="images/Highlights/" alt="" style="max-width: 100%; height: auto;" />
-				</div>
 
 
 
@@ -614,6 +617,8 @@
 			<article id="Experience">
 				<h2 class="major">Experience</h2>
 				<p>
+
+					
 
 				<div style="text-align: center;">
 					<a style="font-size: 19px;"
