Tech fusion highlights

--- a/index.html
+++ b/index.html
@@ -442,6 +442,18 @@
 				<p>
 
 
+
+				<h3 style="text-align: center;">Tech Fusion 4.0 Vitual - 2026
+				</h3>
+				<br>
+				<div style="text-align: center;">
+					<img src="images/Highlights/Fusion Fest 4.0.jpeg" alt="" style="max-width: 100%; height: auto;" />
+					<img src="images/Highlights/" alt="" style="max-width: 100%; height: auto;" />
+				</div>
+
+
+				<hr>
+
 				<h3 style="text-align: center;">RAG with Vertex AI
 					<br> Vitual - 2026
 				</h3>
