Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -481,19 +481,6 @@
 				<hr>
 
 
-				<h3 style="text-align: center;">Event Management - Team Co-Lead - Notion
-					<br> FAST Peshawar - 2025
-				</h3>
-				<br>
-				<div style="text-align: center;">
-					<img src="images/Highlights/Notion Face.png" alt="" style="max-width: 100%; height: auto;" />
-					<img src="images/Highlights/" alt="" style="max-width: 100%; height: auto;" />
-				</div>
-
-
-				<hr>
-
-
 				<h3 style="text-align: center;">FPSC Coding Compition - 2025</h3>
 				<br>
 				<div style="text-align: center;">
@@ -630,6 +617,27 @@
 				<h2 class="major">Experience</h2>
 				<p>
 
+
+				<div style="text-align: center;">
+					<a style="font-size: 19px;"
+						href="https://www.instagram.com/p/DUIW5AKjXwp/"
+						target="_blank">Event Management Lead - Notion</a>
+					<br><br>
+					"November 2025 - Present"
+				</div>
+				<br>
+				<div style="text-align: center;">
+					<img src="images/Experience/Notion.PNG" alt=""
+						style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+				</div>
+
+
+				<hr>
+
+
+
+
+
 					
 
 				<div style="text-align: center;">
@@ -647,6 +655,30 @@
 
 
 				<hr>
+
+
+
+
+				<div style="text-align: center;">
+					<a style="font-size: 19px;"
+						href="https://www.instagram.com/fast_community_service_pwr/p/DRz5fizDH24/"
+						target="_blank">Head Event Management - Fast Community Service Society (FCSS)</a>
+					<br><br>
+					"August 2025 - Present"
+				</div>
+				<br>
+				<div style="text-align: center;">
+					<img src="images/Experience/Head Event Management.png" alt=""
+						style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+				</div>
+
+
+				<hr>
+
+
+
+
+
 
 				<div style="text-align: center;">
 					<a style="font-size: 19px;"
@@ -723,12 +755,29 @@
 					<img src="images/Experience/2.jpeg" alt="" style="max-width: 100%; height: auto;" />
 				</div>
 
+				<hr>
+
+
+				<div style="text-align: center;">
+					<a style="font-size: 19px;"
+						href="https://www.instagram.com/colab.nu/p/CkNpOt6MfTT/?img_index=3"
+						target="_blank">Member - Colab</a>
+					<br><br>
+					"August 2022 - May - 2023"
+				</div>
+				<br>
+				<div style="text-align: center;">
+					<img src="images/Experience/colab.png" alt=""
+						style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+				</div>
+
 
 				</p>
 				<div class="navigation-buttons">
 					<a href="#Highlights" class="button previous">Previous</a>
 					<a href="#contact" class="button next">Next</a>
 				</div>
+				
 
 			</article>
 
