Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -627,8 +627,9 @@
 				</div>
 				<br>
 				<div style="text-align: center;">
-					<img src="images/Experience/Notion.PNG" alt=""
-						style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+					<img src="images/Experience/Notion.PNG" alt="" style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+					<img src="images/Experience/Build with Notion.jpeg" alt="" style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+
 				</div>
 
 
@@ -668,8 +669,8 @@
 				</div>
 				<br>
 				<div style="text-align: center;">
-					<img src="images/Experience/Head Event Management.png" alt=""
-						style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+					<img src="images/Experience/Head Event Management.png" alt="" style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+					<img src="images/Experience/FCSS donation camp.png" alt="" style="max-width: 100%; height: auto; margin-bottom: 10px;" />
 				</div>
 
 
