Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -618,6 +618,66 @@
 				<p>
 
 
+					<div style="text-align: center;">
+						<a style="text-decoration: none; border-bottom: none;">Full-Stack Developer at</a>
+						<a style="font-size: 19px;"
+							href="https://www.linkedin.com/company/developershub-corporation/posts/?feedView=all"
+							target="_blank"> DevelopersHub Corporation </a>
+						<br><br>
+						"Februray 2026 - Present"
+					</div>
+					<br>
+					<div style="text-align: center;">
+						<img src="images/Experience/DevelopersHub Offer Letter.jpg" alt="" style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+					</div>
+
+
+				<hr>
+
+
+
+					<div style="text-align: center;">
+						<a style="text-decoration: none; border-bottom: none;">Teaching Assistant for Differential Equations under</a><br>
+
+						<a style="font-size: 19px;"
+							href="https://www.linkedin.com/in/ansar-rehman-2474a0354/"
+							target="_blank"> Lect. Ansar Rehman </a>
+						<br><br>
+						"January 2025 - Present"
+					</div>
+					<br>
+					<div style="text-align: center;">
+						<img src="images/Experience/Ta.jpg" alt="" style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+					</div>
+
+
+				<hr>
+
+
+
+					<div style="text-align: center;">
+						<a style="font-size: 19px;"
+							href="https://www.linkedin.com/posts/sanaullah-cs_im-proud-to-share-that-ive-officially-started-activity-7428162740562620416-CvIE?utm_source=share&utm_medium=member_desktop&rcm=ACoAADis3pkBUCzUGEFSJq6bqVnxQ9-A6F0PqfA"
+							target="_blank">Chief Bussiness Officer at AFA Innovations </a>
+						<br><br>
+						"January 2025 - Present"
+					</div>
+					<br>
+					<div style="text-align: center;">
+						<img src="images/Experience/CBO.jpg" alt="" style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+					</div>
+
+
+				<hr>
+
+
+
+
+
+
+
+
+
 				<div style="text-align: center;">
 					<a style="font-size: 19px;"
 						href="https://www.instagram.com/p/DUIW5AKjXwp/"
