Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
 					</div>
 					<br>
 					<div style="text-align: center;">
-						<img src="images/Experience/Ta.jpg" alt="" style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+						<img src="images/Experience/DE_Ta.jpg" alt="" style="max-width: 100%; height: auto; margin-bottom: 10px;" />
 					</div>
 
 
